Fixed problem with size of ticket scanning animation and article marks causing a horizontal scrollbar.

--- a/stylesheets/components/_article.scss
+++ b/stylesheets/components/_article.scss
@@ -31,7 +31,7 @@ article {
   }
 
   // MARKS
-  @media(min-width: $screen-sm-min) { // marks only show if the window is wide enough
+  @media(min-width: 800px) { // marks only show if the window is wide enough
     &:not(.no-mark) { // if we want a mark
       h2:before { // common mark properties
         content: '';
